testdata/baselines/reference/compiler/tluaModuleDeclarationEmitUnsupported.errors.txt
tluaModuleDeclarationEmitUnsupported.tlua(3,1): error TS100054: Declaration emit is not supported for a Lua module yet.


==== tluaModuleDeclarationEmitUnsupported.tlua (1 errors) ====
    // Declaration emit for a Lua module has no ambient form yet; it must error
    // with 100054 and emit an empty declaration file rather than panic.
    local x = 1;
    ~~~~~
!!! error TS100054: Declaration emit is not supported for a Lua module yet.
    return { x = x };
    